crates/mun_codegen/src/snapshots/mun_codegen__test__nested_private_recursive_fn_with_args.snap
---
source: crates/mun_codegen/src/test.rs
expression: "\n    extern fn other() -> i32;\n\n    fn private_fn(a: i32) -> f32 {\n        private_fn(a)\n    }\n\n    pub fn main() -> f32 {\n        private_fn(other())\n    }\n    "
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

%DispatchTable = type { ptr }

@dispatchTable = external global %DispatchTable
@global_type_lookup_table = external global [2 x ptr]

define float @private_fn(i32 %0) {
body:
  %a = alloca i32, align 4
  store i32 %0, ptr %a, align 4
  %a1 = load i32, ptr %a, align 4
  %private_fn = call float @private_fn(i32 %a1)
  ret float %private_fn
}

define float @main() {
body:
  %other_ptr = load ptr, ptr @dispatchTable, align 8
  %other = call i32 %other_ptr()
  %private_fn = call float @private_fn(i32 %other)
  ret float %private_fn
}

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

%DispatchTable = type { ptr }

@dispatchTable = global %DispatchTable zeroinitializer
@global_type_lookup_table = global [2 x ptr] zeroinitializer
