crates/mun_codegen/src/snapshots/mun_codegen__test__never_conditional_return_expr.snap
---
source: crates/mun_codegen/src/test.rs
expression: "\n    pub fn main(a:i32) -> i32 {\n        if a > 4 {\n            return a;\n        } else {\n            return a - 1;\n        }\n    }\n    "
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

@global_type_lookup_table = external global [1 x ptr]

define i32 @main(i32 %0) {
body:
  %a = alloca i32, align 4
  store i32 %0, ptr %a, align 4
  %a1 = load i32, ptr %a, align 4
  %greater = icmp sgt i32 %a1, 4
  br i1 %greater, label %then, label %else

then:                                             ; preds = %body
  %a2 = load i32, ptr %a, align 4
  ret i32 %a2

else:                                             ; preds = %body
  %a3 = load i32, ptr %a, align 4
  %sub = sub i32 %a3, 1
  ret i32 %sub
}

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

@global_type_lookup_table = global [1 x ptr] zeroinitializer
