crates/mun_codegen/src/snapshots/mun_codegen__test__return_expr.snap
---
source: crates/mun_codegen/src/test.rs
expression: "\n    pub fn main() -> i32 {\n        return 5;\n        let a = 3; // Nothing regarding this statement should be in the IR\n    }\n    "
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

@global_type_lookup_table = external global [1 x ptr]

define i32 @main() {
body:
  ret i32 5
}

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

@global_type_lookup_table = global [1 x ptr] zeroinitializer
