crates/mun_codegen/src/snapshots/mun_codegen__test__shift_op_i16.snap
---
source: crates/mun_codegen/src/test.rs
expression: "\n    pub fn leftshift(a: i16, b: i16) -> i16 { a << b }\n    pub fn rightshift(a: i16, b: i16) -> i16 { a >> b }\n                        "
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

@global_type_lookup_table = external global [1 x ptr]

define i16 @leftshift(i16 %0, i16 %1) {
body:
  %b = alloca i16, align 2
  store i16 %1, ptr %b, align 2
  %a = alloca i16, align 2
  store i16 %0, ptr %a, align 2
  %a1 = load i16, ptr %a, align 2
  %b2 = load i16, ptr %b, align 2
  %left_shift = shl i16 %a1, %b2
  ret i16 %left_shift
}

define i16 @rightshift(i16 %0, i16 %1) {
body:
  %b = alloca i16, align 2
  store i16 %1, ptr %b, align 2
  %a = alloca i16, align 2
  store i16 %0, ptr %a, align 2
  %a1 = load i16, ptr %a, align 2
  %b2 = load i16, ptr %b, align 2
  %right_shift = ashr i16 %a1, %b2
  ret i16 %right_shift
}

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

@global_type_lookup_table = global [1 x ptr] zeroinitializer
