crates/mun_codegen/src/snapshots/mun_codegen__test__shift_op_u128.snap
---
source: crates/mun_codegen/src/test.rs
expression: "\n    pub fn leftshift(a: u128, b: u128) -> u128 { a << b }\n    pub fn rightshift(a: u128, b: u128) -> u128 { a >> b }\n                        "
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

@global_type_lookup_table = external global [1 x ptr]

define i128 @leftshift(i128 %0, i128 %1) {
body:
  %b = alloca i128, align 8
  store i128 %1, ptr %b, align 4
  %a = alloca i128, align 8
  store i128 %0, ptr %a, align 4
  %a1 = load i128, ptr %a, align 4
  %b2 = load i128, ptr %b, align 4
  %left_shift = shl i128 %a1, %b2
  ret i128 %left_shift
}

define i128 @rightshift(i128 %0, i128 %1) {
body:
  %b = alloca i128, align 8
  store i128 %1, ptr %b, align 4
  %a = alloca i128, align 8
  store i128 %0, ptr %a, align 4
  %a1 = load i128, ptr %a, align 4
  %b2 = load i128, ptr %b, align 4
  %right_shift = lshr i128 %a1, %b2
  ret i128 %right_shift
}

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

@global_type_lookup_table = global [1 x ptr] zeroinitializer
